--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main class="main"></main>
 
-    <footer class="footer">footer</footer>
+    <footer class="footer"></footer>
 
     <!-- js -->
     <script src="js/main.js"></script>
