--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
 
 <body>
 
+    <div class="tagline">
+        <img class="tagline__icon" src="img/icons/ticket-percent.svg" alt="icon">
+        <div class="tagline__desc">30% off storewide — Limited time!</div>
+        <a class="tagline__link" href="#">
+            Shop Now
+            <img src="img/icons/arrow-right.svg" alt="icon">
+        </a>
+    </div>
+
     <header class="header"></header>
 
     <main class="main"></main>
