--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             Shop Now
             <img src="img/icons/arrow-right.svg" alt="icon">
         </a>
+        <button class="tagline__close">
+            <img src="img/icons/close.svg" alt="close">
+        </button>
     </div>
 
     <header class="header"></header>
