--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         </button>
     </div>
 
+    <nav class="nav">
+        <div class="container">
+            <div class="nav__row">
+
+                <a class="nav__logo" href="#">3legant.</a>
+
+                <ul class="nav__list">Nav</ul>
+
+                <ul class="nav__btns">Btns</ul>
+            </div>
+        </div>
+    </nav>
+
     <header class="header"></header>
 
     <main class="main"></main>
