--- a/index.html
+++ b/index.html
@@ -29,9 +29,28 @@
         <div class="container">
             <div class="nav__row">
 
-                <a class="nav__logo" href="#">3legant.</a>
+                <a class="nav__logo logo" href="#">3legant.</a>
 
-                <ul class="nav__list">Nav</ul>
+                <ul class="nav__list">
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Home</a>
+                    </li>
+                    <li class="nav__item">
+                        <button class="nav__link">
+                            Shop
+                            <img src="img/icons/chevron-down.svg" alt="arrow">
+                        </button>
+                    </li>
+                    <li class="nav__item">
+                        <button class="nav__link">
+                            Product
+                            <img src="img/icons/chevron-down.svg" alt="arrow">
+                        </button>
+                    </li>
+                    <li class="nav__item">
+                        <a class="nav__link" href="#">Contact Us</a>
+                    </li>
+                </ul>
 
                 <ul class="nav__btns">Btns</ul>
             </div>
