--- a/index.html
+++ b/index.html
@@ -52,7 +52,18 @@
                     </li>
                 </ul>
 
-                <ul class="nav__btns">Btns</ul>
+                <div class="nav__btns">
+                    <button class="nav__btn">
+                        <img src="img/icons/search.svg" alt="search">
+                    </button>
+                    <button class="nav__btn">
+                        <img src="img/icons/user.svg" alt="user">
+                    </button>
+                    <button class="nav__btn">
+                        <img src="img/icons/cart.svg" alt="cart">
+                        <span class="nav__btn-count">2</span>
+                    </button>
+                </div>
             </div>
         </div>
     </nav>
