--- a/index.html
+++ b/index.html
@@ -68,9 +68,7 @@
         </div>
     </nav>
 
-    <header class="header"></header>
-
-    <main class="main"></main>
+    <section class="hero"></section>
 
     <footer class="footer"></footer>
 
