--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
         </div>
     </nav>
 
-    <section class="hero"></section>
+    <section class="hero">
+        <div class="hero__container">
+            <div class="hero__content">hero</div>
+        </div>
+    </section>
 
     <footer class="footer"></footer>
 
