--- a/index.html
+++ b/index.html
@@ -70,7 +70,22 @@
 
     <section class="hero">
         <div class="hero__container">
-            <div class="hero__content">hero</div>
+            <div class="hero__content">
+
+                <h1 class="hero__title">
+                    Listen to <br>
+                    the <span>amazing</span> music sound.
+                </h1>
+
+                <div class="hero__desc">
+                    <p>Experience music like never before</p>
+                </div>
+
+                <div class="hero__link">
+                    <a class="btn" href="#">Shopping Now</a>
+                </div>
+
+            </div>
         </div>
     </section>
 
