--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <section class="hero none">
         <div class="hero__container">
             <div class="hero__content">
 
@@ -87,6 +87,30 @@
 
             </div>
         </div>
+    </section>
+
+    <section class="arrivals">
+
+        <div class="container">
+            <div class="arrivals__row">
+
+                <div class="arrivals__title">
+                    <h2 class="headline-4">New Arrivals</h2>
+                </div>
+
+                <div class="arrivals__dots">
+                    <div class="dots">
+                        <div class="dots__dot dots__dot--active"></div>
+                        <div class="dots__dot"></div>
+                        <div class="dots__dot"></div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="container-right">Slider</div>
+
     </section>
 
     <footer class="footer"></footer>
