--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero none">
+    <section class="hero">
         <div class="hero__container">
             <div class="hero__content">
 
@@ -109,7 +109,32 @@
             </div>
         </div>
 
-        <div class="container-right">Slider</div>
+        <div class="container-right">
+            <div class="arrivals__slider">
+
+                <article class="card">
+                    <div class="card__picture">
+                        <img src="img/arrivals/01.jpg" srcset="img/arrivals/01@2x.jpg 2x" alt="headphone">
+                        <div class="card__new">New</div>
+                        <div class="card__btn">
+                            <button class="btn btn--small">Add to cart</button>
+                        </div>
+                    </div>
+                    <div class="card__desc">
+                        <div class="card__rating">
+                            <img src="img/icons/star.svg" alt="star">
+                            <img src="img/icons/star.svg" alt="star">
+                            <img src="img/icons/star.svg" alt="star">
+                            <img src="img/icons/star.svg" alt="star">
+                            <img src="img/icons/star.svg" alt="star">
+                        </div>
+                        <div class="card__title">Skullcandy - Crusher anc 2 wireless headphones</div>
+                        <div class="card__price">$299.99</div>
+                    </div>
+                </article>
+
+            </div>
+        </div>
 
     </section>
 
