--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <section class="hero none">
         <div class="hero__container">
             <div class="hero__content">
 
@@ -116,8 +116,13 @@
                     <div class="card__picture">
                         <img src="img/arrivals/01.jpg" srcset="img/arrivals/01@2x.jpg 2x" alt="headphone">
                         <div class="card__new">New</div>
+                        <div class="card__fav">
+                            <button class="btn-fav">
+                                <img src="img/icons/fav.svg" alt="favorite">
+                            </button>
+                        </div>
                         <div class="card__btn">
-                            <button class="btn btn--small">Add to cart</button>
+                            <button class="btn btn--small btn--wide">Add to cart</button>
                         </div>
                     </div>
                     <div class="card__desc">
