--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero none">
+    <section class="hero">
         <div class="hero__container">
             <div class="hero__content">
 
