--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <section class="hero none">
         <div class="hero__container">
             <div class="hero__content">
 
@@ -89,7 +89,7 @@
         </div>
     </section>
 
-    <section class="arrivals">
+    <section class="arrivals none">
 
         <div class="container">
             <div class="arrivals__row">
@@ -437,6 +437,50 @@
             </div>
         </div>
 
+    </section>
+
+    <section class="collection">
+        <div class="container">
+
+            <div class="collection__title">
+                <h2 class="headline-4">Shop Collection</h2>
+            </div>
+
+            <div class="collection__grid">
+
+                <div class="plate plate--tall">
+                    <div class="plate__content">
+                        <h3 class="plate__title">Headband</h3>
+                        <a class="plate__link" href="#">
+                            Collection
+                            <img src="img/icons/arrow-right-black.svg" alt="icon">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="plate">
+                    <div class="plate__content">
+                        <h3 class="plate__title">Earbuds</h3>
+                        <a class="plate__link" href="#">
+                            Collection
+                            <img src="img/icons/arrow-right-black.svg" alt="icon">
+                        </a>
+                    </div>
+                </div>
+
+                <div class="plate plate">
+                    <div class="plate__content">
+                        <h3 class="plate__title">Accessories</h3>
+                        <a class="plate__link" href="#">
+                            Collection
+                            <img src="img/icons/arrow-right-black.svg" alt="icon">
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
     </section>
 
     <footer class="footer"></footer>
