--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
             <div class="collection__grid">
 
-                <div class="plate plate--tall">
+                <div class="plate plate--01 plate--tall">
                     <div class="plate__content">
                         <h3 class="plate__title">Headband</h3>
                         <a class="plate__link" href="#">
@@ -458,7 +458,7 @@
                     </div>
                 </div>
 
-                <div class="plate">
+                <div class="plate plate--02">
                     <div class="plate__content">
                         <h3 class="plate__title">Earbuds</h3>
                         <a class="plate__link" href="#">
@@ -468,7 +468,7 @@
                     </div>
                 </div>
 
-                <div class="plate plate">
+                <div class="plate plate--03">
                     <div class="plate__content">
                         <h3 class="plate__title">Accessories</h3>
                         <a class="plate__link" href="#">
