--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
         </div>
     </section>
 
-    <section class="bestseller">
+    <section class="bestseller none">
         <div class="container">
 
             <div class="bestseller__title">
@@ -738,6 +738,28 @@
 
             </div>
 
+        </div>
+    </section>
+
+    <section class="promotion">
+        <div class="promotion__container">
+            <div class="promotion__content">
+
+                <p class="promotion__tagline">promotion</p>
+
+                <h2 class="promotion__title">Hurry up! 40% OFF</h2>
+
+                <div class="promotion__desc">
+                    <p>Thousands of high tech are waiting for you</p>
+                </div>
+
+                <p class="promotion__expires">Offer expires in:</p>
+
+                <div class="promotion__timer"></div>
+
+                <div class="promotion__btn"></div>
+
+            </div>
         </div>
     </section>
 
