--- a/index.html
+++ b/index.html
@@ -745,19 +745,22 @@
         <div class="promotion__container">
             <div class="promotion__content">
 
-                <p class="promotion__tagline">promotion</p>
-
-                <h2 class="promotion__title">Hurry up! 40% OFF</h2>
-
                 <div class="promotion__desc">
-                    <p>Thousands of high tech are waiting for you</p>
+                    <p class="promotion__tagline">Promotion</p>
+                    <h2 class="promotion__title">Hurry up! 40% OFF</h2>
+                    <div class="promotion__text">
+                        <p>Thousands of high tech are waiting for you</p>
+                    </div>
                 </div>
 
-                <p class="promotion__expires">Offer expires in:</p>
+                <div class="promotion__timer">
+                    <p class="promotion__expires">Offer expires in:</p>
+                    Timer
+                </div>
 
-                <div class="promotion__timer"></div>
-
-                <div class="promotion__btn"></div>
+                <div class="promotion__btn">
+                    <a class="btn btn--small" href="#">Shop now</a>
+                </div>
 
             </div>
         </div>
