--- a/index.html
+++ b/index.html
@@ -754,8 +754,28 @@
                 </div>
 
                 <div class="promotion__timer">
+
                     <p class="promotion__expires">Offer expires in:</p>
-                    Timer
+
+                    <div class="timer">
+                        <div class="timer__el">
+                            <div class="timer__value">02</div>
+                            <div class="timer__desc">Days</div>
+                        </div>
+                        <div class="timer__el">
+                            <div class="timer__value">12</div>
+                            <div class="timer__desc">Hours</div>
+                        </div>
+                        <div class="timer__el">
+                            <div class="timer__value">45</div>
+                            <div class="timer__desc">Minutes</div>
+                        </div>
+                        <div class="timer__el">
+                            <div class="timer__value">05</div>
+                            <div class="timer__desc">Seconds</div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="promotion__btn">
