--- a/index.html
+++ b/index.html
@@ -759,19 +759,19 @@
 
                     <div class="timer">
                         <div class="timer__el">
-                            <div class="timer__value">02</div>
+                            <div class="timer__value" id="days">00</div>
                             <div class="timer__desc">Days</div>
                         </div>
                         <div class="timer__el">
-                            <div class="timer__value">12</div>
+                            <div class="timer__value" id="hours">00</div>
                             <div class="timer__desc">Hours</div>
                         </div>
                         <div class="timer__el">
-                            <div class="timer__value">45</div>
+                            <div class="timer__value" id="minutes">00</div>
                             <div class="timer__desc">Minutes</div>
                         </div>
                         <div class="timer__el">
-                            <div class="timer__value">05</div>
+                            <div class="timer__value" id="seconds">00</div>
                             <div class="timer__desc">Seconds</div>
                         </div>
                     </div>
