--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
         </div>
     </section>
 
-    <section class="promotion">
+    <section class="promotion none">
         <div class="promotion__container">
             <div class="promotion__content">
 
@@ -780,6 +780,38 @@
 
                 <div class="promotion__btn">
                     <a class="btn btn--small" href="#">Shop now</a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="values">
+        <div class="container">
+            <div class="values__grid">
+
+                <div class="value">
+                    <img class="value__img" src="img/values/shipping.svg" alt="">
+                    <h4 class="value__title">Free Shipping</h4>
+                    <p class="value__desc">Order above $200</p>
+                </div>
+
+                <div class="value">
+                    <img class="value__img" src="img/values/finance.svg" alt="">
+                    <h4 class="value__title">Money-back</h4>
+                    <p class="value__desc">30 days guarantee</p>
+                </div>
+
+                <div class="value">
+                    <img class="value__img" src="img/values/lock.svg" alt="">
+                    <h4 class="value__title">Secure Payments</h4>
+                    <p class="value__desc">Secured by Stripe</p>
+                </div>
+
+                <div class="value">
+                    <img class="value__img" src="img/values/call.svg" alt="">
+                    <h4 class="value__title">24/7 Support</h4>
+                    <p class="value__desc">Phone and Email support</p>
                 </div>
 
             </div>
