--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
         </div>
     </section>
 
-    <section class="values">
+    <section class="values none">
         <div class="container">
             <div class="values__grid">
 
@@ -815,6 +815,14 @@
                 </div>
 
             </div>
+        </div>
+    </section>
+
+    <section class="newsletter">
+        <div class="newsletter__content">
+
+            <h2 class="newsletter__title">Join Our Newsletter</h2>
+
         </div>
     </section>
 
