--- a/index.html
+++ b/index.html
@@ -821,7 +821,15 @@
     <section class="newsletter">
         <div class="newsletter__content">
 
-            <h2 class="newsletter__title">Join Our Newsletter</h2>
+            <h2 class="newsletter__title headline-4">Join Our Newsletter</h2>
+
+            <p class="newsletter__desc">Sign up for deals, new products and promotions</p>
+
+            <form class="form-newsletter" action="">
+                <img src="img/icons/email.svg" alt="Email">
+                <input class="form-newsletter__input" type="email" placeholder="Email address">
+                <button class="form-newsletter__submit" type="submit">Signup</button>
+            </form>
 
         </div>
     </section>
