--- a/index.html
+++ b/index.html
@@ -834,7 +834,53 @@
         </div>
     </section>
 
-    <footer class="footer"></footer>
+    <footer class="footer">
+        <div class="container">
+
+            <div class="footer__row footer__row--top">
+
+                <div class="footer__title">
+                    <div class="footer__logo">
+                        3legant<span>.</span>
+                    </div>
+                    <div class="footer__separator"></div>
+                    <div class="footer__store">Headphone Store</div>
+                </div>
+
+                <ul class="footer__nav">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">Product</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+
+            </div>
+
+            <div class="footer__row footer__row--border">
+
+                <div class="footer__copyrights">
+                    <p>Copyright © 2023 3legant. All rights reserved</p>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Use</a>
+                </div>
+
+                <div class="footer__socials">
+                    <a href="#">
+                        <img src="img/socials/instagram.svg" alt="instagram">
+                    </a>
+                    <a href="#">
+                        <img src="img/socials/facebook.svg" alt="facebook">
+                    </a>
+                    <a href="#">
+                        <img src="img/socials/youtube.svg" alt="youtube">
+                    </a>
+                </div>
+
+            </div>
+
+        </div>
+    </footer>
 
     <!-- libs -->
     <script src="libs/swiper/swiper-bundle.min.js"></script>
