--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero none">
+    <section class="hero">
         <div class="hero__container">
             <div class="hero__content">
 
@@ -89,7 +89,7 @@
         </div>
     </section>
 
-    <section class="arrivals none">
+    <section class="arrivals">
 
         <div class="container">
             <div class="arrivals__row">
@@ -439,7 +439,7 @@
 
     </section>
 
-    <section class="collection none">
+    <section class="collection">
         <div class="container">
 
             <div class="collection__title">
@@ -483,7 +483,7 @@
         </div>
     </section>
 
-    <section class="bestseller none">
+    <section class="bestseller">
         <div class="container">
 
             <div class="bestseller__title">
@@ -741,7 +741,7 @@
         </div>
     </section>
 
-    <section class="promotion none">
+    <section class="promotion">
         <div class="promotion__container">
             <div class="promotion__content">
 
@@ -786,7 +786,7 @@
         </div>
     </section>
 
-    <section class="values none">
+    <section class="values">
         <div class="container">
             <div class="values__grid">
 
