--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </button>
     </div>
 
-    <nav class="nav">
+    <nav class="nav none">
         <div class="container">
             <div class="nav__row">
 
@@ -68,7 +68,7 @@
         </div>
     </nav>
 
-    <section class="hero">
+    <section class="hero none">
         <div class="hero__container">
             <div class="hero__content">
 
@@ -89,7 +89,7 @@
         </div>
     </section>
 
-    <section class="arrivals">
+    <section class="arrivals none">
 
         <div class="container">
             <div class="arrivals__row">
@@ -439,7 +439,7 @@
 
     </section>
 
-    <section class="collection">
+    <section class="collection none">
         <div class="container">
 
             <div class="collection__title">
@@ -483,7 +483,7 @@
         </div>
     </section>
 
-    <section class="bestseller">
+    <section class="bestseller none">
         <div class="container">
 
             <div class="bestseller__title">
@@ -741,7 +741,7 @@
         </div>
     </section>
 
-    <section class="promotion">
+    <section class="promotion none">
         <div class="promotion__container">
             <div class="promotion__content">
 
@@ -786,7 +786,7 @@
         </div>
     </section>
 
-    <section class="values">
+    <section class="values none">
         <div class="container">
             <div class="values__grid">
 
@@ -818,7 +818,7 @@
         </div>
     </section>
 
-    <section class="newsletter">
+    <section class="newsletter none">
         <div class="newsletter__content">
 
             <h2 class="newsletter__title headline-4">Join Our Newsletter</h2>
@@ -834,7 +834,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer none">
         <div class="container">
 
             <div class="footer__row footer__row--top">
