--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </button>
     </div>
 
-    <nav class="nav none">
+    <nav class="nav">
         <div class="container">
             <div class="nav__row">
 
@@ -68,13 +68,12 @@
         </div>
     </nav>
 
-    <section class="hero none">
+    <section class="hero">
         <div class="hero__container">
             <div class="hero__content">
 
                 <h1 class="hero__title">
-                    Listen to <br>
-                    the <span>amazing</span> music sound.
+                    Listen&nbsp;to the&nbsp;<span>amazing</span> music&nbsp;sound.
                 </h1>
 
                 <div class="hero__desc">
