--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
     </section>
 
-    <section class="arrivals none">
+    <section class="arrivals">
 
         <div class="container">
             <div class="arrivals__row">
@@ -438,7 +438,7 @@
 
     </section>
 
-    <section class="collection none">
+    <section class="collection">
         <div class="container">
 
             <div class="collection__title">
@@ -482,7 +482,7 @@
         </div>
     </section>
 
-    <section class="bestseller none">
+    <section class="bestseller">
         <div class="container">
 
             <div class="bestseller__title">
@@ -740,13 +740,13 @@
         </div>
     </section>
 
-    <section class="promotion none">
+    <section class="promotion">
         <div class="promotion__container">
             <div class="promotion__content">
 
                 <div class="promotion__desc">
                     <p class="promotion__tagline">Promotion</p>
-                    <h2 class="promotion__title">Hurry up! 40% OFF</h2>
+                    <h2 class="promotion__title">Hurry up! 40%&nbsp;OFF</h2>
                     <div class="promotion__text">
                         <p>Thousands of high tech are waiting for you</p>
                     </div>
@@ -785,7 +785,7 @@
         </div>
     </section>
 
-    <section class="values none">
+    <section class="values">
         <div class="container">
             <div class="values__grid">
 
@@ -817,7 +817,7 @@
         </div>
     </section>
 
-    <section class="newsletter none">
+    <section class="newsletter">
         <div class="newsletter__content">
 
             <h2 class="newsletter__title headline-4">Join Our Newsletter</h2>
@@ -833,7 +833,7 @@
         </div>
     </section>
 
-    <footer class="footer none">
+    <footer class="footer">
         <div class="container">
 
             <div class="footer__row footer__row--top">
