--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
         <div class="container">
             <div class="nav__row">
 
-                <a class="nav__logo logo" href="#">3legant.</a>
+                <div class="nav__logo">
+                    <button class="nav__btn-mobile-nav">
+                        <img src="img/icons/menu.svg" alt="Navigation">
+                    </button>
+                    <a class="logo" href="#">3legant.</a>
+                </div>
 
                 <ul class="nav__list">
                     <li class="nav__item">
@@ -56,10 +61,10 @@
                 </ul>
 
                 <div class="nav__btns">
-                    <button class="nav__btn">
+                    <button class="nav__btn nav__btn--search">
                         <img src="img/icons/search.svg" alt="search">
                     </button>
-                    <button class="nav__btn">
+                    <button class="nav__btn nav__btn--user">
                         <img src="img/icons/user.svg" alt="user">
                     </button>
                     <button class="nav__btn">
