--- a/index.html
+++ b/index.html
@@ -552,8 +552,7 @@
                             <img src="img/icons/star.svg" alt="star">
                         </div>
                         <h3 class="card__title">
-                            Beats <br>
-                            Studio Pro
+                            Beats Studio Pro
                         </h3>
                         <div class="card__price">$349.99</div>
                     </div>
@@ -642,8 +641,7 @@
                             <img src="img/icons/star.svg" alt="star">
                         </div>
                         <h3 class="card__title">
-                            Beats <br>
-                            Studio Pro
+                            Beats Studio Pro
                         </h3>
                         <div class="card__price">$249.99</div>
                     </div>
@@ -703,8 +701,7 @@
                             <img src="img/icons/star.svg" alt="star">
                         </div>
                         <h3 class="card__title">
-                            Bose <br>
-                            QuietComfort Headphones
+                            Bose QuietComfort Headphones
                         </h3>
                         <div class="card__price">$349.00</div>
                     </div>
@@ -735,8 +732,7 @@
                             <img src="img/icons/star.svg" alt="star">
                         </div>
                         <h3 class="card__title">
-                            AKG <br>
-                            Y600NC Wireless
+                            AKG Y600NC Wireless
                         </h3>
                         <div class="card__price">$349.99</div>
                     </div>
