--- a/index.html
+++ b/index.html
@@ -864,8 +864,10 @@
 
                 <div class="footer__copyrights">
                     <p>Copyright © 2023 3legant. All rights reserved</p>
-                    <a href="#">Privacy Policy</a>
-                    <a href="#">Terms of Use</a>
+                    <p class="footer__copyrights-links">
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms of Use</a>
+                    </p>
                 </div>
 
                 <div class="footer__socials">
