--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="nav__row">
 
                 <div class="nav__logo">
-                    <button class="nav__btn-mobile-nav">
+                    <button class="nav__btn-mobile-nav" id="mobile-nav-btn">
                         <img src="img/icons/menu.svg" alt="Navigation">
                     </button>
                     <a class="logo" href="#">3legant.</a>
@@ -75,6 +75,16 @@
             </div>
         </div>
     </nav>
+
+    <div class="mobile-nav">
+        <ul class="mobile-nav__list">
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="#!">Services</a></li>
+            <li><a href="#!">About</a></li>
+            <li><a href="#!">Projects</a></li>
+            <li><a href="#!">Contact</a></li>
+        </ul>
+    </div>
 
     <section class="hero">
         <div class="hero__container">
