--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         </div>
     </nav>
 
-    <div class="mobile-nav">
-        <ul class="mobile-nav__list">
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="#!">Services</a></li>
-            <li><a href="#!">About</a></li>
-            <li><a href="#!">Projects</a></li>
-            <li><a href="#!">Contact</a></li>
-        </ul>
+    <div class="mobile-nav-fade"></div>
+
+    <div class="mobile-nav mobile-nav--open">
+
+        <div class="mobile-nav__top">top</div>
+
+        <div class="mobile-nav__bottom">bottom</div>
+
     </div>
 
     <section class="hero">
