--- a/index.html
+++ b/index.html
@@ -81,14 +81,41 @@
     <div class="mobile-nav mobile-nav--open">
 
         <div class="mobile-nav__top">
+
             <div class="mobile-nav__header">
                 <a class="logo" href="#">3legant<span>.</span></a>
                 <button id="close-mobile-nav">
                     <img src="img/icons/close-nav.svg" alt="close">
                 </button>
             </div>
-            <div class="mobile-nav__search">search</div>
-            <div class="mobile-nav__nav">nav</div>
+
+            <form class="mobile-nav__search">
+                <input class="mobile-nav__search-input" type="text" placeholder="Search">
+            </form>
+
+            <div class="mobile-nav__nav">
+                <ul class="mobile-nav__list">
+                    <li class="mobile-nav__item">
+                        <a class="mobile-nav__link" href="#">Home</a>
+                    </li>
+                    <li class="mobile-nav__item">
+                        <button class="mobile-nav__link">
+                            Shop
+                            <img src="img/icons/chevron-down.svg" alt="arrow">
+                        </button>
+                    </li>
+                    <li class="mobile-nav__item">
+                        <button class="mobile-nav__link">
+                            Product
+                            <img src="img/icons/chevron-down.svg" alt="arrow">
+                        </button>
+                    </li>
+                    <li class="mobile-nav__item">
+                        <a class="mobile-nav__link" href="#">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+
         </div>
 
         <div class="mobile-nav__bottom">
